// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BannerImportant component renders active banner correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "paddingHorizontal": 16,
      },
      Object {
        "backgroundColor": "#7335C0",
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      Object {
        "disabled": true,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    hitSlop={
      Object {
        "bottom": 10,
        "left": 10,
        "right": 10,
        "top": 10,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          undefined,
          Object {
            "backgroundColor": undefined,
          },
        ]
      }
    >
      <View
        style={
          Array [
            undefined,
            undefined,
            undefined,
          ]
        }
      >
        <View />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginLeft": 8,
        "paddingVertical": 6,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#181C32",
            "fontFamily": "BeVietnamPro-Medium",
            "fontSize": 11,
          },
          Object {
            "color": "#FFFFFF",
          },
          undefined,
        ]
      }
    >
      Important
    </Text>
  </View>
</View>
`;

exports[`BannerImportant component renders inactive banner correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "paddingHorizontal": 16,
      },
      Object {
        "backgroundColor": "#BAC0DE",
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      Object {
        "disabled": true,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    hitSlop={
      Object {
        "bottom": 10,
        "left": 10,
        "right": 10,
        "top": 10,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          undefined,
          Object {
            "backgroundColor": undefined,
          },
        ]
      }
    >
      <View
        style={
          Array [
            undefined,
            undefined,
            undefined,
          ]
        }
      >
        <View />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginLeft": 8,
        "paddingVertical": 6,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#181C32",
            "fontFamily": "BeVietnamPro-Medium",
            "fontSize": 11,
          },
          Object {
            "color": "#353E6E",
          },
          undefined,
        ]
      }
    >
      Important
    </Text>
  </View>
</View>
`;
